--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,8 @@
                         <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                       </div>
                       <div class="portfolio__item-card">
-                          <h2 class="portfolio-subject">Технокряк</h2>
-                          <p class="portfolio-desc">Веб-сайт</p>
+                          <h2 class="portfolio__subject">Технокряк</h2>
+                          <p class="portfolio__desc">Веб-сайт</p>
                       </div>
                     </a>
                   </li>
@@ -81,8 +81,8 @@
                         <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                       </div>
                       <div class="portfolio__item-card">
-                          <h2 class="portfolio-subject">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                          <p class="portfolio-desc">Дизайн</p>
+                          <h2 class="portfolio__subject">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                          <p class="portfolio__desc">Дизайн</p>
                       </div>
                     </a>
                   </li>
@@ -93,8 +93,8 @@
                         <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                       </div>
                       <div class="portfolio__item-card">
-                          <h2 class="portfolio-subject">Ресторан <span lang="en">Seafood</span></h2>
-                          <p class="portfolio-desc">Додаток</p>
+                          <h2 class="portfolio__subject">Ресторан <span lang="en">Seafood</span></h2>
+                          <p class="portfolio__desc">Додаток</p>
                       </div>
                     </a>
                   </li>
@@ -105,8 +105,8 @@
                         <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                        </div>
                        <div class="portfolio__item-card">
-                          <h2 class="portfolio-subject">Проєкт <span lang="en">Prime</span></h2>
-                           <p class="portfolio-desc">Маркетинг</p>
+                          <h2 class="portfolio__subject">Проєкт <span lang="en">Prime</span></h2>
+                           <p class="portfolio__desc">Маркетинг</p>
                       </div>
                     </a>
                   </li>
@@ -117,8 +117,8 @@
                         <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                        </div>
                        <div class="portfolio__item-card">
-                           <h2 class="portfolio-subject">Проєкт <span lang="en">Boxes</span></h2>
-                           <p class="portfolio-desc">Додаток</p>
+                           <h2 class="portfolio__subject">Проєкт <span lang="en">Boxes</span></h2>
+                           <p class="portfolio__desc">Додаток</p>
                        </div>
                      </a>
                   </li>
@@ -129,8 +129,8 @@
                         <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                       </div>
                        <div class="portfolio__item-card">
-                           <h2 class="portfolio-subject" lang="en">Inspiration has no Borders</h2>
-                           <p class="portfolio-desc">Веб-сайт</p>
+                           <h2 class="portfolio__subject" lang="en">Inspiration has no Borders</h2>
+                           <p class="portfolio__desc">Веб-сайт</p>
                        </div>
                     </a>
                   </li>
@@ -141,8 +141,8 @@
                         <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                       </div>
                       <div class="portfolio__item-card">
-                          <h2 class="portfolio-subject">Видання <span lang="en">Limited Edition</span></h2>
-                          <p class="portfolio-desc">Дизайн</p>
+                          <h2 class="portfolio__subject">Видання <span lang="en">Limited Edition</span></h2>
+                          <p class="portfolio__desc">Дизайн</p>
                       </div>
                     </a>
                   </li>
@@ -153,8 +153,8 @@
                         <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                       </div>
                       <div class="portfolio__item-card">
-                          <h2 class="portfolio-subject">Проєкт <span lang="en">LAB</span></h2>
-                          <p class="portfolio-desc">Маркетинг</p>
+                          <h2 class="portfolio__subject">Проєкт <span lang="en">LAB</span></h2>
+                          <p class="portfolio__desc">Маркетинг</p>
                       </div>
                     </a>
                   </li>
@@ -165,8 +165,8 @@
                         <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                        </div>
                        <div class="portfolio__item-card">
-                           <h2 class="portfolio-subject" lang="en">Growing Business</h2>
-                           <p class="portfolio-desc">Додаток</p>
+                           <h2 class="portfolio__subject" lang="en">Growing Business</h2>
+                           <p class="portfolio__desc">Додаток</p>
                        </div>
                      </a>
                   </li>
@@ -184,9 +184,9 @@
           </div>
           <address class="footer__link">
             <ul class="footer__list list">
-              <li class="footer__link"><a href="https://goo.gl/maps/2YivaZYnpbvyPGKD6" class="contact-item-adr link">м. Київ, пр-т Лесі Українки, 26</a></li>
-              <li class="footer__link"><a href="mailto:info@devstudio.com" class="contact-item link">info@devstudio.com</a></li>
-              <li class="footer__link"><a href="tel:+380961111111" class="contact-item link">+38 096 111 11 11</a></li>
+              <li class="footer__link"><a href="https://goo.gl/maps/2YivaZYnpbvyPGKD6" class="footer-item-adr link">м. Київ, пр-т Лесі Українки, 26</a></li>
+              <li class="footer__link"><a href="mailto:info@devstudio.com" class="footer-item link">info@devstudio.com</a></li>
+              <li class="footer__link"><a href="tel:+380961111111" class="footer-item link">+38 096 111 11 11</a></li>
             </ul>
           </address>
         </div>
