--- a/index.html
+++ b/index.html
@@ -439,9 +439,9 @@
             </div>
             <address class="footer__link">
               <ul class="footer__list list">
-                <li class="footer__link"><a href="https://goo.gl/maps/2YivaZYnpbvyPGKD6" class="contact-item-adr link">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li class="footer__link"><a href="mailto:info@devstudio.com" class="contact-item link">info@devstudio.com</a></li>
-                <li class="footer__link"><a href="tel:+380961111111" class="contact-item link">+38 096 111 11 11</a></li>
+                <li class="footer__link"><a href="https://goo.gl/maps/2YivaZYnpbvyPGKD6" class="footer-item-adr link">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li class="footer__link"><a href="mailto:info@devstudio.com" class="footer-item link">info@devstudio.com</a></li>
+                <li class="footer__link"><a href="tel:+380961111111" class="footer-item link">+38 096 111 11 11</a></li>
               </ul>
             </address>
           </div>
